--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 							</span>
 						</div>
 					</div>
-					<div class="overflow-auto" style="height: 50%; flex: 4">
+					<div class="overflow-auto" style="height: 30%;">
 						<div class="mail_header mail_header_top d-flex">
 							<span class="">Sender</span>
 							<span class="subject flex-fill">Subject</span>
 							<span class="text-end">Timestamp</span>
 						</div>
-						<div id="mail_headers" style="flex: 6" class="d-flex flex-column-reverse">
+						<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 						</div>
 					</div>
 					<div id="mail_container_full" class="overflow-auto" style="height: 50%;">
