--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	</style>
 </head>
 
-<body class="dark" id="body">
-	<div class="inverse container-fluid content">
+<body>
+	<div class=" container-fluid content">
 		<noscript>
 			<div class="row">
 				<div class="col">
@@ -34,9 +34,12 @@
 							alt="LOG IN with EVE Online" /></a>
 				</p>
 			</div>
+			<hr class="vertical-hr" />
+			<div><a class="btn external-link" href='https://github.com/zkillboard/podmail' target="_blank">GitHub</a>
+			</div>
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
-			<div class="xs-hideit resizable-x d-flex flex-column vh-100" id="panelsearch">
+			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
 				<div class="d-flex"><span><a href='/'><img id="sitelogo" src="/img/podmail.png"
 								title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
@@ -46,16 +49,18 @@
 				</div>
 				<div class="d-flex flex-column h-100">
 					<div id="folders" class="flex-fill"></div>
+					<hr />
 					<div id="about" class="d-flex flex-row">
-						<div class="flex-fill"><a class="btn" href='https://github.com/zkillboard/podmail'
-								target="'">GitHub</a>
+						<div class="flex-fill"><a class="btn external-link" href='https://github.com/zkillboard/podmail'
+								target="_blank">GitHub</a>
 						</div>
 						<div class="flex-fill"><a id="logout" class="btn">Logout</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="flex-fill" id="panelorders">
+			<hr class="vertical-hr">
+			<div class="flex-fill" id="messages_container">
 				<div class="d-flex flex-column vh-100">
 					<div class="">
 						<div class="d-flex">
@@ -83,11 +88,10 @@
 						<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 						</div>
 					</div>
-					<div id="mail_container_full" class="overflow-auto" style="height: 50%;">
+					<div id="mail_container_full" class="overflow-auto" style="height: 80%;">
 						<div id="mail_container">
 							<div id="mail_about"></div>
-							<div id="mail_body">
-							</div>
+							<div id="mail_body"></div>
 						</div>
 					</div>
 				</div>
