--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							alt="LOG IN with EVE Online" /></a>
 				</p>
 			</div>
-			<hr class="vertical-hr" />
+			<div id="readme"></div>
 			<div><a class="btn external-link" href='https://github.com/zkillboard/podmail' target="_blank">GitHub</a>
 			</div>
 		</div>
@@ -50,7 +50,7 @@
 				<div class="d-flex flex-column h-100">
 					<div id="folders" class="flex-fill"></div>
 					<hr />
-					<div id="about" class="d-flex flex-row">
+					<div id="info" class="d-flex flex-row">
 						<div class="flex-fill"><a class="btn external-link" href='https://github.com/zkillboard/podmail'
 								target="_blank">GitHub</a>
 						</div>
@@ -98,6 +98,7 @@
 			</div>
 		</div>
 	</div>
+	<script defer="" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
