--- a/index.html
+++ b/index.html
@@ -79,26 +79,34 @@
 							</span>
 						</div>
 					</div>
-					<div class="overflow-auto" style="height: 30%;">
+					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column">
 						<div class="mail_header mail_header_top d-flex">
 							<span class="">Sender</span>
 							<span class="subject flex-fill">Subject</span>
-							<span class="text-end">Timestamp</span>
+							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
-						<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
-						</div>
+						<dvi class="overflow-auto h-100">
+							<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
+							</div>
+						</dvi>
 					</div>
-					<div id="mail_container_full" class="overflow-auto" style="height: 80%;">
-						<div id="mail_container">
-							<div id="mail_about"></div>
-							<div id="mail_body"></div>
+					<div id="mail_container_full" class="overflow-auto h-100 d-flex d-none">
+						<div id="mail_options">
+						</div>
+						<div id="mail_container" class="d-flex flex-column h-100">
+							<div id=" mail_about">
+								<span id="backToFolder" class="btn">Back</span>
+							</div>
+							<hr />
+							<div id="mail_body" class="overflow-auto h-100"></div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script defer="" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+	<script defer="" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
+	</script>
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
