some html polishing

--- a/index.html
+++ b/index.html
@@ -79,25 +79,26 @@
 							</span>
 						</div>
 					</div>
-					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column">
+					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column mb-2">
 						<div class="mail_header mail_header_top d-flex">
 							<span class="">Sender</span>
 							<span class="subject flex-fill">Subject</span>
 							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
-						<dvi class="overflow-auto h-100">
+						<hr />
+						<div class="overflow-auto h-100">
 							<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 							</div>
-						</dvi>
+						</div>
 					</div>
 					<div id="mail_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="mail_options">
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100">
 							<div id=" mail_about">
-								<span id="backToFolder" class="btn">Back</span>
+								<span id="backToFolder" class="btn" folder_id="1">Back</span>
 							</div>
-							<hr />
+							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
 						</div>
 					</div>
