--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html" githubhash="fff2af4">
+<html id="html" githubhash="eb442a8">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=fff2af4">
+	<link rel="stylesheet" href="/css/app.css?v=eb442a8">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -79,25 +79,26 @@
 							</span>
 						</div>
 					</div>
-					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column">
+					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column mb-2">
 						<div class="mail_header mail_header_top d-flex">
 							<span class="">Sender</span>
 							<span class="subject flex-fill">Subject</span>
 							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
-						<dvi class="overflow-auto h-100">
+						<hr />
+						<div class="overflow-auto h-100">
 							<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 							</div>
-						</dvi>
+						</div>
 					</div>
 					<div id="mail_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="mail_options">
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100">
 							<div id=" mail_about">
-								<span id="backToFolder" class="btn">Back</span>
+								<span id="backToFolder" class="btn" folder_id="1">Back</span>
 							</div>
-							<hr />
+							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
 						</div>
 					</div>
@@ -110,8 +111,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=fff2af4"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=fff2af4"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=eb442a8"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=eb442a8"></script>
 </body>
 
 </html>
