margin fix, deployment test

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<span class="subject flex-fill">Subject</span>
 							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
-						<hr />
+						<hr class="m-0" />
 						<div class="overflow-auto h-100">
 							<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 							</div>
