--- a/index.html
+++ b/index.html
@@ -94,9 +94,20 @@
 					<div id="mail_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="mail_options">
 						</div>
-						<div id="mail_container" class="d-flex flex-column h-100">
-							<div id=" mail_about">
+						<div id="mail_container" class="d-flex flex-column h-100 w-100">
+							<div id="mail_about">
 								<span id="backToFolder" class="btn" folder_id="1">Back</span>
+							</div>
+							<hr class="p-0 m-0 mt-1 mb-1" />
+							<div id="mail_body" class="overflow-auto h-100"></div>
+						</div>
+					</div>
+					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
+						<div id="compose_options">
+						</div>
+						<div id="compose_container" class="d-flex flex-column h-100 w-100">
+							<div id="mail_about">
+								<span id="btn_send" class="btn" folder_id="1">Send</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
