--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html" githubhash="f96025d">
+<html id="html" githubhash="78b4272">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=f96025d">
+	<link rel="stylesheet" href="/css/app.css?v=78b4272">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -94,9 +94,20 @@
 					<div id="mail_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="mail_options">
 						</div>
-						<div id="mail_container" class="d-flex flex-column h-100">
-							<div id=" mail_about">
+						<div id="mail_container" class="d-flex flex-column h-100 w-100">
+							<div id="mail_about">
 								<span id="backToFolder" class="btn" folder_id="1">Back</span>
+							</div>
+							<hr class="p-0 m-0 mt-1 mb-1" />
+							<div id="mail_body" class="overflow-auto h-100"></div>
+						</div>
+					</div>
+					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
+						<div id="compose_options">
+						</div>
+						<div id="compose_container" class="d-flex flex-column h-100 w-100">
+							<div id="mail_about">
+								<span id="btn_send" class="btn" folder_id="1">Send</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
@@ -111,8 +122,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=f96025d"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=f96025d"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=78b4272"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=78b4272"></script>
 </body>
 
 </html>
