--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 						id="btnorders">View PodMails =&gt;</span>
 				</div>
 				<div class="d-flex flex-column h-100">
+					<dvi id="compose_btn_parent" class="m-2">
+						<span id="compose_btn" class="btn w-100">Compose</span>
+					</dvi>
 					<div id="folders" class="flex-fill"></div>
 					<hr />
 					<div id="info" class="d-flex flex-row">
@@ -86,7 +89,7 @@
 							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
 						<hr class="m-0" />
-						<div class="overflow-auto h-100">
+						<div id="mail_headers_parent" class="h-100">
 							<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 							</div>
 						</div>
@@ -102,15 +105,22 @@
 							<div id="mail_body" class="overflow-auto h-100"></div>
 						</div>
 					</div>
-					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
-						<div id="compose_options">
-						</div>
+					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none mb-5">
 						<div id="compose_container" class="d-flex flex-column h-100 w-100">
-							<div id="mail_about">
+							<div id="compose_options" class="w-100">
 								<span id="btn_send" class="btn" folder_id="1">Send</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
-							<div id="mail_body" class="overflow-auto h-100"></div>
+							<div id="compose_recipients" class="w-100">
+								<input name="compose_recipients" type="text" class="w-100" placeholder="Recipients">
+							</div>
+							<hr class="p-0 m-0 mt-1 mb-1" />
+							<div id="compose_subject" class="w-100">
+								<input name="compose_subject" type="text" class="w-100" placeholder="Subject">
+							</div>
+							<hr class="p-0 m-0 mt-1 mb-1" />
+							<div id="compose_body" class="overflow-auto w-100 h-100"><input name="compose_body"
+									type="text" class="w-100 h-100" placeholder=""></div>
 						</div>
 					</div>
 				</div>
