some cleanup, only mark mail as (un)read if needed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<h1>PodMail <small>β</small></h1>
 				<p>A web application for accessing and sending in game evemails.</p>
 				<p>
-					<a href="/login" onClick="startLogin(); return false;"><img src="/img/ssologin.png"
+					<a href="/" onClick="startLogin(); return false;"><img src="/img/ssologin.png"
 							alt="LOG IN with EVE Online" /></a>
 				</p>
 			</div>
@@ -40,7 +40,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a href='/'><img id="sitelogo" src="/img/podmail.png"
+				<div class="d-flex"><span><a id='podmailLink' href='/'><img id="sitelogo" src="/img/podmail.png"
 								title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
