--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html" githubhash="edf82f1">
+<html id="html" githubhash="e0eabc0">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=edf82f1">
+	<link rel="stylesheet" href="/css/app.css?v=e0eabc0">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -30,7 +30,7 @@
 				<h1>PodMail <small>β</small></h1>
 				<p>A web application for accessing and sending in game evemails.</p>
 				<p>
-					<a href="/login" onClick="startLogin(); return false;"><img src="/img/ssologin.png"
+					<a href="/" onClick="startLogin(); return false;"><img src="/img/ssologin.png"
 							alt="LOG IN with EVE Online" /></a>
 				</p>
 			</div>
@@ -40,7 +40,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a href='/'><img id="sitelogo" src="/img/podmail.png"
+				<div class="d-flex"><span><a id='podmailLink' href='/'><img id="sitelogo" src="/img/podmail.png"
 								title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
@@ -48,6 +48,9 @@
 						id="btnorders">View PodMails =&gt;</span>
 				</div>
 				<div class="d-flex flex-column h-100">
+					<dvi id="compose_btn_parent" class="m-2">
+						<span id="compose_btn" class="btn w-100">Compose</span>
+					</dvi>
 					<div id="folders" class="flex-fill"></div>
 					<hr />
 					<div id="info" class="d-flex flex-row">
@@ -86,7 +89,7 @@
 							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
 						<hr class="m-0" />
-						<div class="overflow-auto h-100">
+						<div id="mail_headers_parent" class="h-100">
 							<div id="mail_headers" class="flex-fill d-flex flex-column-reverse">
 							</div>
 						</div>
@@ -103,14 +106,27 @@
 						</div>
 					</div>
 					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
-						<div id="compose_options">
-						</div>
 						<div id="compose_container" class="d-flex flex-column h-100 w-100">
-							<div id="mail_about">
+							<div id="compose_options" class="w-100">
 								<span id="btn_send" class="btn" folder_id="1">Send</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
-							<div id="mail_body" class="overflow-auto h-100"></div>
+							<div id="compose_recipients" class="w-100">
+								<input name="compose_recipients" type="text" class="w-100"
+									placeholder="Enter comma delimited recipients names here, they will be parsed and added below.">
+							</div>
+							<div id="compose_recipients_container" class="w-100 d-flex">
+								<span>Recipients:&nbsp;&nbsp;</span>
+								<div id="compose_recipients_calculated" class="w-100 d-flex"></div>
+							</div>
+							<hr class="p-0 m-0 mt-1 mb-1" />
+							<div id="compose_subject" class="w-100">
+								<input name="compose_subject" type="text" class="w-100" placeholder="Subject">
+							</div>
+							<hr class="p-0 m-0 mt-1 mb-1" />
+							<div id="compose_body" class="overflow-auto w-100 h-100"><textarea
+									id="compose_body_textarea" name="compose_body" type="text"
+									class="overflow-auto w-100" placeholder="content here"></textarea></div>
 						</div>
 					</div>
 				</div>
@@ -122,8 +138,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=edf82f1"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=edf82f1"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=e0eabc0"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=e0eabc0"></script>
 </body>
 
 </html>
