various color changes to appease TrueBrain's OCD :)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html id="html" githubhash="">
+<html lang="en" id="html" githubhash="" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/app.css">
 	<style id="current_folder">
 		.folder-1.showhide {
@@ -35,7 +35,8 @@
 				</p>
 			</div>
 			<div id="readme"></div>
-			<div><a class="btn external-link" href='https://github.com/zkillboard/podmail' target="_blank">GitHub</a>
+			<div><a class="btn btn-secondary external-link" href='https://github.com/zkillboard/podmail'
+					target="_blank">GitHub</a>
 			</div>
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
@@ -49,15 +50,17 @@
 				</div>
 				<div class="d-flex flex-column h-100">
 					<dvi id="compose_btn_parent" class="m-2">
-						<span id="compose_btn" class="btn w-100">Compose</span>
+						<span id="compose_btn" class="btn btn-primary w-100">Compose</span>
 					</dvi>
 					<div id="folders" class="flex-fill"></div>
 					<hr />
-					<div id="info" class="d-flex flex-row">
-						<div class="flex-fill"><a class="btn external-link" href='https://github.com/zkillboard/podmail'
+					<div id="info" class="d-flex flex-row justify-content-center align-items-center mb-2">
+						<div class="flex-fill d-flex justify-content-center">
+							<a class="btn btn-info external-link" href="https://github.com/zkillboard/podmail"
 								target="_blank">GitHub</a>
 						</div>
-						<div class="flex-fill"><a id="logout" class="btn">Logout</a>
+						<div class="flex-fill d-flex justify-content-center">
+							<a id="logout" class="btn btn-danger">Logout</a>
 						</div>
 					</div>
 				</div>
@@ -71,7 +74,7 @@
 								Folders</span>
 							<h4>
 								<img class="d-inline float-start" id="charimg">
-								<span id="charname"></span>
+								<h4 id="charname"></h4>
 							</h4>
 							<small class="m-auto"></small>
 							<span id="inflight_spinner" class="spinner d-none"></span>
@@ -99,7 +102,7 @@
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100 w-100">
 							<div id="mail_about">
-								<span id="backToFolder" class="btn" folder_id="1">Back</span>
+								<span id="backToFolder" class="btn btn-primary" folder_id="1">Back</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
@@ -108,7 +111,7 @@
 					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="compose_container" class="d-flex flex-column h-100 w-100">
 							<div id="compose_options" class="w-100">
-								<span id="btn_send" class="btn" folder_id="1">Send</span>
+								<span id="btn_send" class="btn btn-primary" folder_id="1">Send</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_recipients" class="w-100">
@@ -135,8 +138,8 @@
 	</div>
 	<script defer="" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
 	</script>
-	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
 	<script defer="" data-server_start="1752004823892" src="/js/auth.js"></script>
 	<script defer="" data-server_start="1752004823892" src="/js/app.js"></script>
