implemention of delete evemail

--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
 						<div id="mail_options">
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100 w-100">
-							<div id="mail_about">
+							<div id="mail_about" class="d-flex flex-row">
 								<span id="backToFolder" class="btn btn-primary" folder_id="1">Back</span>
+								<hr class="vertical-hr" />
+								<span id="btn_deleteMail" class="btn btn-danger" folder_id="1">Delete</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
