deploy: 8e9fe2f60d638c344593e0617501bd2dd83dad9a

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="42f61d5" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="8e9fe2f" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=42f61d5">
+	<link rel="stylesheet" href="/css/app.css?v=8e9fe2f">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -101,8 +101,10 @@
 						<div id="mail_options">
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100 w-100">
-							<div id="mail_about">
+							<div id="mail_about" class="d-flex flex-row">
 								<span id="backToFolder" class="btn btn-primary" folder_id="1">Back</span>
+								<hr class="vertical-hr" />
+								<span id="btn_deleteMail" class="btn btn-danger" folder_id="1">Delete</span>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="mail_body" class="overflow-auto h-100"></div>
@@ -141,8 +143,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=42f61d5"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=42f61d5"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=8e9fe2f"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=8e9fe2f"></script>
 </body>
 
 </html>
