--- a/index.html
+++ b/index.html
@@ -138,6 +138,33 @@
 			</div>
 		</div>
 	</div>
+	<div class="modal fade" id="confirmModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content text-white bg-dark">
+				<div class="modal-header">
+					<h5 class="modal-title">Confirm</h5>
+				</div>
+				<div class="modal-body"> Are you sure? </div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" id="confirmCancel">Cancel</button>
+					<button type="button" class="btn btn-danger" id="confirmOk">OK</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="alertModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content text-white bg-dark">
+				<div class="modal-header">
+					<h5 class="modal-title">Alert</h5>
+				</div>
+				<div class="modal-body" id="alertModalMessage"></div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" id="alertModalOk">OK</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script defer="" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
 	</script>
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
