--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="8e9fe2f" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="d2f3781" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=8e9fe2f">
+	<link rel="stylesheet" href="/css/app.css?v=d2f3781">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -138,13 +138,40 @@
 			</div>
 		</div>
 	</div>
+	<div class="modal fade" id="confirmModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content text-white bg-dark">
+				<div class="modal-header">
+					<h5 class="modal-title">Confirm</h5>
+				</div>
+				<div class="modal-body"> Are you sure? </div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" id="confirmCancel">Cancel</button>
+					<button type="button" class="btn btn-danger" id="confirmOk">OK</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="modal" id="alertModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content text-white bg-dark">
+				<div class="modal-header">
+					<h5 class="modal-title">Alert</h5>
+				</div>
+				<div class="modal-body" id="alertModalMessage"></div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" id="alertModalOk">OK</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script defer="" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
 	</script>
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=8e9fe2f"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=8e9fe2f"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=d2f3781"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=d2f3781"></script>
 </body>
 
 </html>
