deploy: 27bd86a0713926afdb12a48f222890b175246f37

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="0a83db3" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="27bd86a" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=0a83db3">
+	<link rel="stylesheet" href="/css/app.css?v=27bd86a">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -112,7 +112,28 @@
 									folder_id="1">Delete</button>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
-							<div id="mail_body" class="overflow-auto h-100"></div>
+							<div id="mail_all" class="h-100 w-100 overflow-auto">
+								<div id="mail_about" class="w-100">
+									<div class="w-100 d-flex flex-wrap">
+										<div>
+											<h4 id="mail_about_subject"></h4>
+										</div>
+										<div class="m-auto"></div>
+										<div id="mail_about_timestamp"></div>
+									</div>
+									<div class="w-100 d-flex flex-wrap">
+										<div class="w-100">From:</div>
+										<div id="mail_about_from" class="w-100"></div>
+									</div>
+									<hr class="m-1" />
+									<div class="w-100 d-flex flex-wrap">
+										<div class="w-100">Recipients:</div>
+										<div id="mail_about_recipients" class="w-100"></div>
+									</div>
+								</div>
+								<hr class="m-1" />
+								<div id="mail_body" class="w-100 h-100"></div>
+							</div>
 						</div>
 					</div>
 					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
@@ -130,9 +151,12 @@
 								<input name="compose_recipients" type="text" class="w-100"
 									placeholder="Enter comma delimited character names here, they will be parsed and added below.">
 							</div>
-							<div id="compose_recipients_container" class="w-100 d-flex">
-								<span>Recipients:&nbsp;&nbsp;</span>
-								<div id="compose_recipients_calculated" class="w-100 d-flex"></div>
+							<div id="compose_recipients_container" class="w-100 d-flex flex-column">
+								<div id="compose_recipients_title" class="w-100">Recipients: <span
+										style="font-size: 70%; font-style: italic; margin-top: 8px;">(tap to
+										remove)</span></span></div>
+								<div id="compose_recipients_calculated" class="w-100 d-flex flex-wrap overflow-auto">
+								</div>
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_subject" class="w-100">
@@ -145,8 +169,9 @@
 									class="form-control">
 								</div>
 							</div>
-							<div class="mb-2 d-flex">
+							<div id="compose_final_options" class="mb-2 d-flex">
 								<div class="m-auto"></div>
+								<button type="button" id="btn_reset" class="btn btn-bind btn-warning">Reset</button>
 								<button type="button" id="btn_send" class="btn btn-bind btn-primary">Send</button>
 							</div>
 						</div>
@@ -187,8 +212,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=0a83db3"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=0a83db3"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=27bd86a"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=27bd86a"></script>
 </body>
 
 </html>
