tweaks, improvements, and fixes

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<hr class="m-1" />
 									<div class="w-100 d-flex flex-wrap">
 										<div class="w-100">Recipients:</div>
-										<div id="mail_about_recipients" class="w-100"></div>
+										<div id="mail_about_recipients" class="w-100 d-flex"></div>
 									</div>
 								</div>
 								<hr class="m-1" />
