Improved constrast on evemails

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 											<h4 id="mail_about_subject"></h4>
 										</div>
 										<div class="m-auto"></div>
+										<div id="mail_body_adjusted" data-contrast="false"><a
+												onClick="return contrastNotify();" href="">🌗</a></div>
 										<div id="mail_about_timestamp"></div>
 									</div>
 									<div class="w-100 d-flex flex-wrap">
@@ -132,6 +134,7 @@
 									</div>
 								</div>
 								<hr class="m-1" />
+								<div id="mail_body_adjusted" data-contrast="false">🌗</div>
 								<div id="mail_body" class="w-100 h-100"></div>
 							</div>
 						</div>
