deploy: 90b26ee26518bf3493ec26c1147c799a4167c772

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="0cf8b9d" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="90b26ee" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=0cf8b9d">
+	<link rel="stylesheet" href="/css/app.css?v=90b26ee">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -119,6 +119,8 @@
 											<h4 id="mail_about_subject"></h4>
 										</div>
 										<div class="m-auto"></div>
+										<div id="mail_body_adjusted" data-contrast="false"><a
+												onClick="return contrastNotify();" href="">🌗</a></div>
 										<div id="mail_about_timestamp"></div>
 									</div>
 									<div class="w-100 d-flex flex-wrap">
@@ -132,6 +134,7 @@
 									</div>
 								</div>
 								<hr class="m-1" />
+								<div id="mail_body_adjusted" data-contrast="false">🌗</div>
 								<div id="mail_body" class="w-100 h-100"></div>
 							</div>
 						</div>
@@ -212,8 +215,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=0cf8b9d"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=0cf8b9d"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=90b26ee"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=90b26ee"></script>
 </body>
 
 </html>
